# llm-observability

./: .datadog-remediation  .gitignore  .pytest.ini  1-llm-span.ipynb  1-quickstart.ipynb  2-tracing-your-llm-application.ipynb  2-workflow-span.ipynb  3-agent-span.ipynb  4-custom-evaluations.ipynb  4-langchain-integration.ipynb  README.md  met-search-endpoint-parameters.json  pre-commit  requirements.txt
.github/: CODEOWNERS
1-tracing/: 1-llm-span.ipynb  3-agent-span.ipynb  4-custom-evaluations.ipynb  README.md  requirements.txt
2-experiments/: 03-remote-evaluators.ipynb
2-online-evaluation/: requirements.txt
3-experiments/: README.md
contract-redliner/: .env.example  README.md  experiment.py  golden_dataset.csv  main.py  requirements.txt
demo_scripts/: bedrock_demo.py  langchain_demo.py  openai_demo.py
evaluation_examples/: 1-tool-selection-demo.py  2-tool-argument-correctness-demo.py  README.md
examples/: 2-tracing-your-llm-application.ipynb  (+3 more)
examples/rust/: Cargo.toml
examples/rust/src/: client.rs  config.rs  main.rs  models.rs  span_extraction.rs
test/: .gitignore  (+19 more)
test-apps/stock-watchlist-agent/: .env.example  .gitignore  .llmobs_experiments.json.publish.json  INLINE_EXPERIMENTS_GUIDE.md  README.md  TESTING.md  capture_one.py  capture_quotes.py  capture_watchlists.py  pyproject.toml  replay_poc.py  sitecustomize.py  trace_scenarios.py  trace_watchlists.py
test-apps/stock-watchlist-agent/src/: __init__.py  evals.py  main.py  models.py  observability.py
test-apps/stock-watchlist-agent/src/agents/: orchestrator.py  researcher.py  searcher.py
(+192 files in other folders)
