[package]
name = "dd-llm-obs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
opentelemetry = "0.31.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
tokio = { version = "1.48", features = ["full"] }
